--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Football League Data Dashboard</h1>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6">
@@ -30,7 +31,10 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
-                <div class="selector" id="league-selector"><p>Some text</p>
+                <div class="selector" id="league-selector">
+                </div>
+                <div id="league-info">
+                    
                 </div>
             </div>
         </div>
@@ -38,15 +42,16 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12">
+                <h2>League Table</h2>
                 <div class="league" id="league-name"></div>
             </div>
         </div>
     </div> 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6">
+            <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="table-data" id="league-table"></div>
-                <div class="league-position"><svg id="league-position-by-matchday" width="100%" height="600px"></svg></div>
+                <div class="league-position"><h2>League Position By Matchday</h2><svg id="league-position-by-matchday" width="100%" height="100%" viewBox="0 0 1000 600" preserveAspectRatio="xMidYMid meet">></svg></div>
             </div>
         </div>
     </div>
